kubernets-dashboard/spazzatura/dashboard-cors-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-cors
  namespace: kubernetes-dashboard
spec:
  headers:
    accessControlAllowCredentials: true
    accessControlAllowHeaders:
      - "*"
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "PUT"
      - "DELETE"
      - "PATCH"
      - "OPTIONS"
    accessControlAllowOriginList:
      - "https://dashboard.pindaroli.org"
    accessControlExposeHeaders:
      - "*"
    accessControlMaxAge: 3600
