kubernets-dashboard/spazzatura/dashboard-headers-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-headers
  namespace: kubernetes-dashboard
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Host: "dashboard.pindaroli.org"
    customResponseHeaders:
      X-Content-Type-Options: "nosniff"
      X-Frame-Options: "DENY"
      Content-Security-Policy: "default-src 'self' 'unsafe-inline' 'unsafe-eval'"
