kubernets-dashboard/spazzatura/kube-dash-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-dash-ingress-route
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.pindaroli.org`)
      kind: Rule
      middlewares:
        - name: dashboard-cors
        - name: dashboard-headers
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
          serversTransport: dashboard-transport
  tls:
    secretName: pindaroli-wildcard-tls
